Fix alignment of reference help link

--- a/client/src/app/auth/register/register.component.scss
+++ b/client/src/app/auth/register/register.component.scss
@@ -43,7 +43,7 @@
 
     .find-link {
       text-align: right;
-      margin: 0px 0px 15px 0px;
+      margin: 5px 0px 15px 0px;
     }
 
     .register-button {
